@@ -10,10 +10,9 @@
 		<string>230 675 279 44 0 0 1280 1002 </string>
 	</dict>
 	<key>IBFramework Version</key>
-	<string>283.0</string>
+	<string>291.0</string>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>29</integer>
 		<integer>533</integer>
 	</array>
 	<key>IBSystem Version</key>
